added docs to views
